infrastructure/security/cloudflare-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared-security-policy
  namespace: cloudflare
  annotations:
    argocd.argoproj.io/tracking-id: cluster-infrastructure:cilium.io/CiliumNetworkPolicy:cloudflare/cloudflared-security-policy
spec:
  endpointSelector:
    matchLabels:
      app: cloudflared
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
            - port: "7844"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - {}
